crates/solidity-v2/testing/snapshots/diagnostics_output/structure/modifier_body_without_placeholder/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[SyntaxError 2883] Error: Modifier body does not contain '_'.
   ╭─[input.sol:6:19]
   │
 6 │     modifier m1() {}
   │                   ─┬  
   │                    ╰── Error occurred here.
───╯

[SyntaxError 2883] Error: Modifier body does not contain '_'.
    ╭─[input.sol:9:19]
    │
  9 │ ╭─▶     modifier m2() {
    ┆ ┆   
 11 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
